--- a/demos/package.json
+++ b/demos/package.json
@@ -5,13 +5,19 @@
     "start": "node index.js"
   },
   "description": "",
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "author": "",
   "license": "MIT",
   "dependencies": {
     "@webserverless/fc-express": "latest",
     "body-parser": "^1.19.0",
-    "express": "^4.17.0"
+    "cookie-parser": "^1.4.4",
+    "express": "^4.17.0",
+    "jsonwebtoken": "^8.5.1",
+    "lowdb": "^1.0.0",
+    "md5": "^2.2.1",
+    "request": "^2.88.2",
+    "tablestore": "^5.0.7",
+    "uuid": "^7.0.3"
   }
 }
